[fix] profile status
